--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header class="header">
-            <img src="/image/SnowTubeLunch.jpg" alt="SnowTubeLunch logo" class="logo">
+            <img src="../image/SnowTubeLunch.jpg" alt="SnowTubeLunch logo" class="logo">
         </header>
 
         <button id="create_btn" class="create_btn"><b>新規登録</b></button>
