--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 
         <button id="create_btn" class="create_btn"><b>新規登録</b></button>
 
-        <h2>動画情報一覧</h2>
+        <h2 class="index_title">動画情報一覧</h2>
         <div id="shop_list"></div>
         
         <div class="modal" id="modal">
