--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -29,6 +29,14 @@ body
     margin: 20px;
 }
 
+.index_title
+{
+    font-size: 28px;
+    font-weight: 700;
+    color: #222;
+    margin-left: 30px;
+    margin-bottom: 12px;
+}
 
 .modal
 {
