--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -161,7 +161,8 @@ body
 
 /* Responsive tweaks for small screens */
 @media (max-width: 600px) {
-    body { font-size: 16px; padding-left: 20px;padding-bottom: 120px; }
+    body { font-size: 16px; padding-bottom: 120px; }
+    main { padding-left: 20px; }
 
     /* header/logo */
     .header { padding: 10px; }
