--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -164,7 +164,7 @@ body
     body { font-size: 16px; padding-bottom: 120px; }
 
     /* header/logo */
-    .header { padding: 10px; }
+    .header { padding: 10px; width: 100%;}
     .logo { width: min(92%, 360px); max-width: 360px; height: auto; display: block; margin: 6px auto; }
 
     /* Buttons: make them large and easy to tap; try two-across then stack on narrow screens */
@@ -187,6 +187,9 @@ body
         align-items: center;
     }
 
+    .footer {
+        width: 100%;
+    }
     /* If screen is very narrow, stack buttons full width */
     @media (max-width: 360px) {
         .home_button, .edit_btn { width: calc(100% - 32px); margin: 8px auto; display: block; }
