--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -185,6 +185,7 @@ body
         margin: 12px auto;
         font-size: 16px;
         align-items: center;
+        margin-left: 20px;
     }
 
     .footer {
