Add site favicon (SnowTubeLunchLogo.png) to index/detail/root

--- a/views/detail.html
+++ b/views/detail.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>STL-{{ shop.name }}</title>
     <link rel="stylesheet" href="../assets/css/detail.css">
+    <link rel="icon" href="../image/SnowTubeLunchLogo.png" type="image/png">
+    <link rel="apple-touch-icon" href="../image/SnowTubeLunchLogo.png">
     <script src="../assets/js/detail.js" defer></script>
     </head>
     <body>
