--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SnowTubeLunch</title>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="icon" href="../image/SnowTubeLunchLogo.png" type="image/png">
+    <link rel="apple-touch-icon" href="../image/SnowTubeLunchLogo.png">
         <script src="../assets/js/index.js" defer></script>
     </head>
     <body>
