--- a/views/detail.html
+++ b/views/detail.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.85, minimum-scale=0.5, maximum-scale=1.0">
         <title>STL-{{ shop.name }}</title>
     <link rel="stylesheet" href="../assets/css/detail.css">
     <link rel="icon" href="../image/SnowTubeLunchLogo.png" type="image/png">
