--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.85, minimum-scale=0.5, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SnowTubeLunch</title>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/index.css">
