--- a/views/detail.html
+++ b/views/detail.html
@@ -10,6 +10,10 @@
     <script src="../assets/js/detail.js" defer></script>
     </head>
     <body>
+        <!-- Mobile background video (hidden on larger screens) -->
+        <video id="bg-video" autoplay muted loop playsinline poster="../image/SnowTubeLunch.jpg">
+            <source src="../image/SnowTubeLunch.mp4" type="video/mp4">
+        </video>
         <header class="header">
             <img src="../image/SnowTubeLunch.jpg" alt="SnowTubeLunch logo" class="logo">
         </header>
