--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,10 @@
         <script src="../assets/js/index.js" defer></script>
     </head>
     <body>
+        <!-- Mobile background video (hidden on larger screens) -->
+        <video id="bg-video" autoplay muted loop playsinline poster="../image/SnowTubeLunch.jpg">
+            <source src="../image/SnowTubeLunch.mp4" type="video/mp4">
+        </video>
         <header class="header">
             <img src="../image/SnowTubeLunch.jpg" alt="SnowTubeLunch logo" class="logo">
         </header>
