--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -1,6 +1,6 @@
 .header
 {
-    background-color: rgba(169, 197, 249, 0.88);
+    background-color: rgba(169, 197, 249, 0.5);
     color: white;
     padding: 12px 0;
     text-align: center;
@@ -34,6 +34,7 @@ body
     background-color: rgb(202, 236, 248);
     margin: 0;
     margin-bottom: 100px;
+    width: 100%;
 }
 
 .home_button, .edit_btn
