--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -93,7 +93,7 @@ body
     font-size: 24px;
     font-weight: 700;
     color: #222;
-    margin-left: 10%;
+    margin-left: 100px;
     margin-bottom: 10px;
 }
 
@@ -241,7 +241,7 @@ body
     .h3
     {
         font-size: 20px;
-        margin-left: 10%;
+        margin-left: 100px;
     }
 
     .create_btn {
